Fixed input range style on IE11

--- a/src/css/toolbox-animated-preview.css
+++ b/src/css/toolbox-animated-preview.css
@@ -50,6 +50,7 @@
   height : 26px;
   margin : 0;
   box-sizing: border-box;
+  padding:0;
 }
 
 .preview-toggle-onion-skin {
